--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,29 @@
+cffi==1.15.1
+clr-loader==0.2.5
+contourpy==1.1.0
+cycler==0.11.0
 et-xmlfile==1.1.0
+fonttools==4.40.0
 greenlet==2.0.2
+kiwisolver==1.4.4
+matplotlib==3.7.1
 MouseInfo==0.1.3
 numpy==1.24.2
 openpyxl==3.1.2
+packaging==23.1
 pandas==1.5.3
+Pillow==9.5.0
 psycopg2==2.9.5
 PyAutoGUI==0.9.53
+pycparser==2.21
 PyGetWindow==0.0.9
 PyMsgBox==1.0.9
+pyparsing==3.1.0
 pyperclip==1.8.2
 PyRect==0.2.0
 PyScreeze==0.1.28
 python-dateutil==2.8.2
+pythonnet==3.0.1
 pytweening==1.0.4
 pytz==2023.3
 pywin32==306
