--- a/.gitignore
+++ b/.gitignore
@@ -176,8 +176,8 @@ pyrightconfig.json
 # End of https://www.toptal.com/developers/gitignore/api/python
 
 
-.csv
-.xls
-.xlsx
-.xml
-.png
+*.csv
+*.xls
+*.xlsx
+*.xml
+*.png
